# LudumDare55

./: Cargo.toml
assets/: ground.aseprite  slime.aseprite  wizard.aseprite
src/: enviroment.rs  main.rs  player.rs
